# ML-studies

./: .gitconfig  .gitignore  404.html  Dockerfile  Jupyter-Dockerfile  README.md  extra.css  index.html  mkdocs-base.yml  mkdocs.yml  pyrightconfig.json  refs.bib  requirements.txt  setDisplay.sh  sitemap.xml  socatStart.sh  startJupyter.sh  startPythonDocker.sh  startVenvForWindows.bat
code/: SUBJECTS.md  pyproject.toml
code/LLM/: README.md
code/LLM/huggingface/: main.py
code/LLM/ollama/: README.md  chat_with_mistral.py
code/LlamaIndex/: pyproject.toml
code/agents/: README.md
code/agents/agno/: README.md  config.yaml  first_mlx_agent_with_tool.py  mlx_llm_code_agent.py  ollama_agent_with_tool.py  olmx_deep_researcher.py  pyrightconfig.json  startoLMX.sh
code/agents/langgraph/: adaptive_rag.py  feynman_process.py  first_graph_only_llm.py  first_graph_with_tool.py  main.css  prebuilt_react_lg.py
code/anomaly-detection/: Outliers.ipynb  README.md  boxplot.py
code/classification/: DecisionTree.ipynb  KFoldCrossValidation.ipynb  KNN.ipynb  NaiveBayes.ipynb  README.md  SVC.ipynb  TrainTest.ipynb  classifications.ipynb  classifiers.ipynb  multiclass-classifier.ipynb  sklearn-classifiers.ipynb  spark_decision_tree.py  test_adaline.py  test_battery_classifier.py
code/computer-vision/: Keras-CNN.ipynb  README.md  computer_vision.ipynb  tiny_vgg.py
code/computer-vision/mammogram-mass/: mammo_masses_project.ipynb  personal-study.ipynb
code/deep-learning/: DeepLearningProject-Solution.ipynb  FinalProjectAssignment.ipynb  Keras-RNN.ipynb  Keras.ipynb  README.md  Tensorflow.ipynb
code/deep-learning/fundamentals/: plotting-dataset.py  sigmoid-play.ipynb
code/deep-learning/neuralnetwork/: Deep_net_keras.ipynb  shallow_net_demo.ipynb
code/deep-neural-net/: test-env.ipynb
code/deep-neural-net/LLM/: supervised_fine_tune_llm.ipynb
code/haystack/: pyproject.toml
code/huggingface/: pyproject.toml
code/llm-langchain/: opensearch-docker-compose.yml  pyproject.toml  requirements.txt
code/llm-langchain/Gemini/: Basic_Text_Chat_Gemini.py
code/llm-langchain/anthropic/: ClientApp.py  TestFirstChat.py
code/llm-langchain/bedrock/: TestEmbeddings.py  cot2.txt
code/llm-langchain/cohere/: cohere_chat_lg.py
code/llm-langchain/featureform/: featureform-docker-compose.yaml  requirements.txt
code/llm-langchain/langgraph/: ask_human_graph.py  human_in_loop.py  mistral_lg_tool.py
code/llm-langchain/mistral/: mistral_tool_calling.py
code/llm-langchain/openAI/: client_stream.py  openAI_agent.py  openAI_retrieval_lc.py  requirements.txt
code/llm-langchain/watsonX/: TestCallToOneLLM copy.py
code/llm-ollama/: chat_with_ollama_openai_api.py
code/logistic-regression/: README.md  classify_with_pipe.py
code/ml-python/classifiers/: TestBatteryClassifier.py  TestKernelSVMonOR.py
code/nlp/: README.md  TopPages.ipynb
code/perceptron/: README.md  __init__.py  test_perceptron.py  tool.py
code/pytorch/: pyproject.toml  requirements.txt
code/pytorch/classification/: multiclass-classifier.ipynb
code/pytorch/ddp/: single_gpu.py
code/pytorch/get_started/: AlgebraPyTorch.py  basic-torch.py
code/regression/: LinearRegression.ipynb  MultivariateRegression.ipynb  PolynomialRegression.ipynb  README.md
code/shared/: MatPlotLib.ipynb  PandasTutorial.ipynb  README.md
code/statistics/: ConditionalProbabilityExercise.ipynb  CovarianceCorrelation.ipynb  Distributions.ipynb  MeanMedianExercise.ipynb  MeanMedianMode.ipynb  Moments.ipynb  Percentiles.ipynb  PoliticsExercise.ipynb  README.md  StdDevVariance.ipynb  TTest.ipynb
code/unsupervised/: ItemBasedCF.ipynb  ItemBasedCFv2.ipynb  KMeans.ipynb  PCA.ipynb  README.md  SimilarMovies.ipynb
e2e-demos/chat_with_pdf/: app.py  pyproject.toml  requirements.txt
e2e-demos/ollama-mistral/: RunnableExamples.py  chat_with_ollama_mistral.py  docker-compose.yaml  pyproject.toml
e2e-demos/qa_retrieval/: Main.py  pyproject.toml  requirements.txt
e2e-demos/resume_tuning/: README.md  centific.md  extracted_needs.md  jbr.md  main.py  new_resume.md  pyproject.toml  requirements.txt  test_process_resume.py
e2e-demos/resume_tuning/agent_vstore/: chroma.sqlite3
e2e-demos/streaming-demo/: index.html  main.py  main_lg.py  pyproject.toml  txt.json
e2e-demos/think_deeply/: hf_chat.py  ollama_openai_chat.py  prompt.txt  pyproject.toml
examples/ml-python/: pyproject.toml
examples/ml-python/anomaly-detection/: std_deviation.py
examples/ml-python/classifiers/: ._plot_classifier_comparison.py  naive_bayes_classifier.py  random_forest_iris.py
examples/ml-python/neuralnetwork/: AlexnetJb.ipynb  intermediate_nn_keras_demo.ipynb
jupyter/: README.md  pyproject.toml  verify_notebooks.py
notebooks/: ConditionalProbabilityExercise.ipynb  CovarianceCorrelation.ipynb  DecisionTree.ipynb  Distributions.ipynb  FinalProjectAssignment.ipynb  ItemBasedCF.ipynb  ItemBasedCFv2.ipynb  KFoldCrossValidation.ipynb  KMeans.ipynb  KNN.ipynb  Keras-CNN.ipynb  Keras-RNN.ipynb  Keras.ipynb  LinearRegression.ipynb  MatPlotLib.ipynb  MeanMedianExercise.ipynb  MeanMedianMode.ipynb  Moments.ipynb  MultivariateRegression.ipynb  NaiveBayes.ipynb  Outliers.ipynb  PCA.ipynb  PandasTutorial.ipynb  Percentiles.ipynb  PoliticsExercise.ipynb  PolynomialRegression.ipynb  README.md  SVC.ipynb  SimilarMovies.ipynb  StdDevVariance.ipynb  TTest.ipynb  Tensorflow.ipynb  TopPages.ipynb  TrainTest.ipynb  classifiers.ipynb  pyproject.toml  verify_notebooks.py
notebooks/mammogram-mass/: mammo_masses_project.ipynb  personal-study.ipynb
src/: pyproject.toml
src/agentic/agno/: AGNO_REFERENCE.md  README.md  cursor_omlx.md  (+8 more)
src/llm-ollama/: pyproject.toml
src/ml-python/: demo_lasso_ridge.py
techno/crew-ai/: a_resume.md  customer_outreach.py  financial_analysis.py  gcp-interview.md  interview_materials.md  job_application.py  pyproject.toml  readme.md  requirements.txt  research-agent.py  support_crew.py  tailored_resume copy.md  tailored_resume.md
techno/nicegui/: index.html  main.py  pyproject.toml
techno/streamlit/: Hello.py  index.html  pyproject.toml
(+650 files in other folders)
