[project]
name = "mlstudies-code"
version = "0.1.0"
description = "ML Studies code - classical ML, PyTorch, LLM, and agents"
readme = "SUBJECTS.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchmetrics>=1.0.0",
    "torchinfo>=1.8.0",
    "mlxtend>=0.23.0",
]

deep-learning = [
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
]

anomaly = [
    "pyod>=1.1.0",
]

kaggle = [
    "kaggle>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]

llm = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.20.0",
]

agents = [
    "mlstudies-code[llm]",
    "langgraph>=0.2.0",
    "agno>=2.5.5",
    "chromadb>=0.4.0",
    "arxiv>=3.0.0",
    "ddgs>=9.10.0",
    "fastapi>=0.134.0",
    "google-genai>=1.65.0",
    "pypdf>=6.10.2",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

openai = [
    "mlstudies-code[llm]",
    "langchain-openai>=0.2.0",
    "langchainhub>=0.1.0",
    "beautifulsoup4>=4.12.0",
]

anthropic = [
    "mlstudies-code[llm]",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.30.0",
]

mistral = [
    "mlstudies-code[llm]",
    "mistralai>=1.0.0",
    "langchain-mistralai>=0.2.0",
]

cohere = [
    "mlstudies-code[llm]",
    "cohere>=5.0.0",
    "langchain-cohere>=0.3.0",
]

gemini = [
    "mlstudies-code[llm]",
    "google-generativeai>=0.5.0",
    "langchain-google-genai>=2.0.0",
]

watsonx = [
    "mlstudies-code[llm]",
    "ibm-watsonx-ai>=1.0.0",
    "langchain-ibm>=0.3.0",
]

bedrock = [
    "mlstudies-code[llm]",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "transformers>=4.24.0,<5",
    "unstructured>=0.10.0",
    "langchain-experimental>=0.3.0",
]

rag = [
    "mlstudies-code[llm]",
    "langchain-chroma>=0.1.0",
    "faiss-cpu>=1.7.0,<2",
    "sentence-transformers>=2.2.0",
    "pypdf>=6.10.2",
    "datasets>=2.0.0",
]

all = [
    "mlstudies-code[pytorch,deep-learning,anomaly,kaggle,llm,agents,rag,openai,anthropic,mistral,cohere,gemini,watsonx,bedrock]",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["LLM/shared/mlstudies"]
