[project]
name = "ml-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for ML learning - regression, classification, clustering, deep learning"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pydotplus>=2.0.2",
    "xlrd>=2.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "scikeras>=0.13.0",
]

[project.optional-dependencies]
# Deep learning notebooks
deep-learning = [
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
]

# Spark notebooks
spark = [
    "pyspark>=3.5.0",
]

[tool.uv]
dev-dependencies = []

