[project]
name = "mlstudies"
version = "0.1.0"
description = "ML Studies shared utilities - config, RAG, LLM factories"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# LangChain core
langchain = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
]

# RAG utilities
rag = [
    "mlstudies[langchain]",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
]

# LLM provider clients
openai = [
    "mlstudies[langchain]",
    "langchain-openai>=0.2.0",
]

anthropic = [
    "mlstudies[langchain]",
    "langchain-anthropic>=0.2.0",
]

mistral = [
    "mlstudies[langchain]",
    "langchain-mistralai>=0.2.0",
]

watsonx = [
    "mlstudies[langchain]",
    "langchain-ibm>=0.3.0",
    "ibm-watsonx-ai>=1.0.0",
]

# All features
all = [
    "mlstudies[rag,openai,anthropic,mistral,watsonx]",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlstudies"]

