[project]
name = "chat-with-pdf-demo"
version = "0.1.0"
description = "Chat with PDF documents using LangChain"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "langchain>=0.3.0",
    "pypdf>=3.8.0,<4",
]

[tool.uv]
dev-dependencies = []

