[project]
name = "ollama-mistral-demo"
version = "0.1.0"
description = "Chat with Ollama Mistral models"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "ollama>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
]

[tool.uv]
dev-dependencies = []

