[project]
name = "qa-retrieval-demo"
version = "0.1.0"
description = "Streamlit app demonstrating RAG impact on response quality"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "langchain>=0.3.0",
    "langchainhub>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "pypdf>=3.8.0,<4",
    "chromadb>=0.4.0",
]

[tool.uv]
dev-dependencies = []

