[project]
name = "resume-tuning-demo"
version = "0.1.0"
description = "Resume optimization using LLM"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pypdf>=3.8.0,<4",
    "sqlalchemy>=2.0.0",
    "sentence-transformers>=2.2.0",
]

[tool.uv]
dev-dependencies = []

