[project]
name = "ml-python-studies"
version = "0.1.0"
description = "Classical machine learning with scikit-learn - classifiers, regression, clustering"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
# Anomaly detection
anomaly = [
    "pyod>=1.1.0",
]

# Kaggle competitions
kaggle = [
    "kaggle>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]

# Neural network experiments
neural = [
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
]

# Jupyter notebook support
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

