[project]
name = "nicegui-studies"
version = "0.1.0"
description = "NiceGUI experiments for Python-native web UIs"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "nicegui>=1.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# LLM chat integration
llm = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]

[tool.uv]
dev-dependencies = []

