[project]
name = "streamlit-studies"
version = "0.1.0"
description = "Streamlit UI experiments for data apps"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
]

[tool.uv]
dev-dependencies = []

